# ContextInjector

./: .gitignore  README.md  client.py  mcp.pcap  pyproject.toml  server.py
attacks/: injection.py  tools.py
feeds/: rss.py
logging/: formatters.py  middleware.py
logutils/: formatters.py  middleware.py
models/: __init__.py  app_state.py  attack_controller.py  attack_profiles.py  goodreads_client.py  injection.py  settings.py
scripts/: run_attack_matrix.sh
tools/: attack_control.py  goodreads.py
utils/: cache.py  normalize.py  text.py
