[project]
name = "ContextInjector"
version = "0.1.0"
description = "An MCP server for exposing Goodreads RSS data and injecting malicious context."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.14.4",
    "feedparser>=6.0.12",
]
